[package]
name = "mc-sgx-panic-abort"
version = "0.1.0"
authors = ["MobileCoin"]
description = "Aborting panic handler for Intel-SGX enclaves."
edition = "2018"
repository = "https://github.com/mobilecoinfoundation/sgx.git"
license = "Apache-2.0"
keywords = ["no-std", "sgx", "mobilecoin", "panic-handler"]
categories = ["hardware-support", "api-bindings"]
readme = "README.md"

[lib]
# Testing needs panic handlers for the host.  Disabling since this is panic
# handling for the enclave target
test = false

[badges]
maintenance = { status = "actively-developed" }
