[package]
name = "mc-sgx-service-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
mc-sgx-service-ffi-types = { path = "types" }
mc-sgx-core-ffi-types = { path = "../../core/ffi/types" }

[build-dependencies]
bindgen = "0.60.1"
cargo-emit = "0.2.1"
mc-sgx-core-build = { path = "../../core/build" }
