[package]
name = "mc-sgx-tcrypto-sys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.62.1"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
authors = ["MobileCoin"]
description = '''
This crate contains the FFI linkage for the `sgx_tcrypto` library.
'''
links = "sgx_tcrypto"

[dependencies]
mc-sgx-core-sys-types = { path = "../../core/sys/types" }
mc-sgx-tcrypto-sys-types = { path = "types" }

[dev-dependencies]
sha2 = "0.10.2"

[build-dependencies]
bindgen = "0.60.1"
cargo-emit = "0.2.1"
mc-sgx-core-build = { path = "../../core/build" }
