[package]
name = "mc-sgx-tcrypto-sys"
version = "0.6.0"
authors = ["MobileCoin"]
categories = ["external-ffi-bindings", "hardware-support", "no-std"]
description = "FFI bindings for `sgx_tcrypto`."
edition = "2021"
keywords = ["crypto", "ffi", "sgx", "no-std"]
license = "Apache-2.0"
links = "sgx_tcrypto"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[lib]
doctest = false

[dependencies]
mc-sgx-core-sys-types = { path = "../../core/sys/types", version = "=0.6.0" }
mc-sgx-tcrypto-sys-types = { path = "types", version = "=0.6.0" }

[dev-dependencies]
sha2 = "0.10.6"

[build-dependencies]
bindgen = "0.65.1"
cargo-emit = "0.2.1"
mc-sgx-core-build = { path = "../../core/build", version = "=0.6.0" }
