[package]
name = "mc-sgx-trts-ffi"
version = "0.1.0"
edition = "2021"

[lib]
# test false due to needing an enclave to fully link
test = false

[features]
default = []
hw = []

[dependencies]
mc-sgx-core-ffi-types = { path = "../../core/ffi/types" }

[build-dependencies]
bindgen = "0.60.1"
cargo-emit = "0.2.1"

mc-sgx-core-build = { path = "../../core/build" }
