[package]
name = "mc-sgx-trts-sys"
version = "0.4.2"
authors = ["MobileCoin"]
categories = ["external-ffi-bindings", "hardware-support", "no-std"]
description = "FFI bindings for `sgx_trts`."
edition = "2021"
keywords = ["ffi", "sgx", "no-std"]
license = "Apache-2.0"
links = "sgx_trts"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[lib]
# test false due to needing an enclave to fully link
test = false
doctest = false

[features]
default = []
sim = []

[dependencies]
mc-sgx-core-sys-types = { path = "../../core/sys/types", version = "=0.4.2" }

[build-dependencies]
bindgen = "0.64.0"
cargo-emit = "0.2.1"
mc-sgx-core-build = { path = "../../core/build", version = "=0.4.2" }
