[package]
name = "mc-sgx-trts-sys"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["external-ffi-bindings", "hardware-support", "no-std"]
description = "FFI bindings for `sgx_trts`."
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["ffi", "sgx", "no-std"]
license = { workspace = true }
links = "sgx_trts"
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[lib]
# test false due to needing an enclave to fully link
test = false
doctest = false

[features]
default = []
sim = []

[dependencies]
mc-sgx-core-sys-types = { path = "../../core/sys/types", version = "=0.6.0" }

[build-dependencies]
bindgen = "0.65.1"
cargo-emit = "0.2.1"
mc-sgx-core-build = { path = "../../core/build", version = "=0.6.0" }
