[package]
name = "test_utils"
# Version is kept here in this local only crate to make it easy to automated
# updating the version string in all the crates.
version = "0.2.0-pre0"
edition = "2021"
authors = ["MobileCoin"]
rust-version = "1.62.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
description = "Test utilities for the rust wrappers of the `sgx_tservice` library."

categories = ["development-tools::testing"]
keywords = ["sgx", "test"]

[dependencies]
mc-sgx-tservice-sys-types = { path = "../sys/types", version = "=0.2.0-pre0" }
