[package]
name = "mc-sgx-tservice-types"
version = "0.4.0"
authors = ["MobileCoin"]
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for SGX trusted service types."
edition = "2021"
keywords = ["ffi", "sgx"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mobilecoinfoundation/sgx"
rust-version = "1.62.1"

[features]
default = []
serde = ["mc-sgx-core-types/serde"]
alloc = []
test-utils = []

[dependencies]
mc-sgx-core-types = { path = "../../core/types", version = "=0.4.0" }
mc-sgx-tservice-sys-types = { path = "../sys/types", version = "=0.4.0" }

[dev-dependencies]
yare = "1.0.2"
