[package]
name = "mc-sgx-tservice-types"
version = "0.6.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["api-bindings", "hardware-support"]
description = "Rust wrapper for SGX trusted service types."
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["ffi", "sgx"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = []
serde = ["mc-sgx-core-types/serde"]
alloc = []
test-utils = []

[dependencies]
mc-sgx-core-types = { path = "../../core/types", version = "=0.6.0" }
mc-sgx-tservice-sys-types = { path = "../sys/types", version = "=0.6.0" }

[dev-dependencies]
yare = "1.0.2"
